--- a/css/estilos.css
+++ b/css/estilos.css
@@ -3,12 +3,11 @@
   padding: 0; }
 
 body {
-  font-family: "Open Sans", Arial, Sans-serif;
-  font-size: 16px; }
+ }
 
 /* ----- ----- HEADER ----- ----- */
 header {
-  background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),url(../img/portada-new.png);
+  background: url(../img/inicio.png);
   height: 100vh;
   background-size: cover;
   background-position: center 0;
@@ -32,34 +31,19 @@ header {
 /* hasta qqui */
 
   header .textos {
-    color: #F3F3EB;
     text-align: center;
-    margin-top: -20px;
+
   }
-    header .textos .primera_linea,
-    header .textos .segunda_linea,
-    header .textos .tercera_linea,
     header .textos .cuarta_linea,
     header .textos .quinta_linea {
       font-family:'Rotten', sans-serif;
       color: #F3F3EB; 
       font-weight: lighter;
+
     }
-    header .textos .primera_linea {
-      margin-right: 500px; 
-      font-size: 200px;
-    }
-    header .textos .segunda_linea {
-      margin-top: -150px;
-      font-size: 200px;
-    }
-    header .textos .tercera_linea {
-      margin-left: 400px; 
-      margin-top: -150px;
-      font-size: 200px;
-    }
+
     header .textos .cuarta_linea {
-      margin-top: 20px;
+      margin-top: 60%;
       font-size: 50px;
     }
     header .textos .quinta_linea {
@@ -115,27 +99,7 @@ header {
 
 
 /* ----- ----- MAIN ----- ----- */
-.main .caracteristicas {
-  padding: 70px 0; }
-  .main .caracteristicas .titulo {
-    text-align: center;
-    font-family: "Open Sans", Arial, Sans-serif;
-    font-weight: 300;
-    font-size: 32px;
-    color: #000;
-    margin-bottom: 70px; }
-  .main .caracteristicas .caracteristica {
-    text-align: center; }
-    .main .caracteristicas .caracteristica .icono {
-      vertical-align: top;
-      margin-bottom: 30px; }
-    .main .caracteristicas .caracteristica .primera_linea {
-      font-weight: 700;
-      margin-bottom: 30px;
-      font-size: 20px; }
-    .main .caracteristicas .caracteristica .parrafo {
-      margin-bottom: 30px;
-      line-height: 28px; }
+
 .main .fotos {
   margin-bottom: 70px; 
   background: url(../img/fondo-boda.png);
@@ -148,11 +112,20 @@ header {
     /* foto de novios ovalada */
     .main .fotos .foto .thumb img {
       border-radius: 3px;
-      width: 110%;
+      width: 48%;
       vertical-align: top; 
     background-size: contain;
+    text-align: center;
 
   }
+  .main .fotos .foto .thumb h1 {
+    font-family:'Rotten', sans-serif;
+    color: #C16301;
+    font-weight: bold;
+    font-size: 25px;
+    text-align: center;
+    margin-top: 5%;
+}
       .main .fotos .foto .nosotros {
         text-align: center; 
       color: #C16301;
@@ -193,138 +166,160 @@ header {
   font-weight:normal;
   margin-top: 2%;
 }
-.main .precios {
-  background: url("../img/precios-bg.jpg"), #727171;
+.main .precios{
+  background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),url("../img/etiqueta.png");
   background-size: cover;
   background-position: center 0;
   background-repeat: no-repeat;
-  padding: 70px 0; }
-  .main .precios .titulo {
-    text-align: center;
-    font-family: "Open Sans", Arial, Sans-serif;
-    font-weight: 300;
-    font-size: 32px;
-    color: #fff;
-    margin-bottom: 70px; }
-  .main .precios .plan {
-    background: #fff;
-    text-align: center;
-    font-family: "Open Sans", Arial, Sans-serif;
-    padding: 50px 0;
-    -webkit-box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.35);
-    box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.35); }
-    .main .precios .plan .nombre {
-      font-size: 32px;
-      line-height: 32px;
-      font-weight: 300;
-      margin-bottom: 30px; }
-    .main .precios .plan .precio {
-      font-weight: 300;
-      font-size: 48px;
-      margin-bottom: 30px; }
-    .main .precios .plan .caracteristicas {
-      list-style: none;
-      padding: 0 20px;
-      margin-bottom: 50px; }
-      .main .precios .plan .caracteristicas li {
-        font-size: 18px;
-        padding: 15px 0;
-        border-bottom: 1px solid #dedede; }
-    .main .precios .plan .btn {
-      width: 70%;
-      padding: 15px 0;
-      text-align: center;
-      display: inline-block;
-      border-radius: 100px; }
-      .main .precios .plan .btn:hover {
-        text-decoration: none; }
-    .main .precios .plan.verde .nombre,
-    .main .precios .plan.verde .precio {
-      color: #86b773; }
-    .main .precios .plan.verde .btn {
-      color: #86b773;
-      border: 2px solid #86b773; }
-      .main .precios .plan.verde .btn:hover {
-        background: #86b773;
-        color: #fff; }
-    .main .precios .plan.active {
-      background: #4c8dce;
-      color: #fff; }
-      .main .precios .plan.active .btn {
-        color: #fff;
-        border: 2px solid #fff; }
-        .main .precios .plan.active .btn:hover {
-          background: #fff;
-          color: #4c8dce; }
-    .main .precios .plan.naranja .nombre,
-    .main .precios .plan.naranja .precio {
-      color: #ddb146; }
-    .main .precios .plan.naranja .btn {
-      color: #ddb146;
-      border: 2px solid #ddb146; }
-      .main .precios .plan.naranja .btn:hover {
-        background: #ddb146;
-        color: #fff; }
-.main .reviews {
-  padding: 70px; }
-  .main .reviews .titulo {
-    text-align: center;
-    font-family: "Open Sans", Arial, Sans-serif;
-    font-weight: 300;
-    font-size: 32px;
-    color: #4facd3;
-    margin-bottom: 70px; }
-  .main .reviews .cliente {
-    overflow: hidden;
-    margin-bottom: 20px; }
-    .main .reviews .cliente .foto {
-      width: 20%;
-      float: left;
-      text-align: right; }
-      .main .reviews .cliente .foto img {
-        max-width: 100px;
-        width: 100%;
-        vertical-align: top;
-        border-radius: 100%; }
+  height: 100vh;
+  position: relative;
+}
+.main .precios .texto-etiqueta img{
+  left: 50%;
+  top: 30%;
+  width: 7%;
+  position: absolute;
+}
+  .main .precios .texto-etiqueta p{
+    text-align: justify;
+    font-family: 'Futura LT', sans-serif;
+    font-size: 25px;
+    color: #F3F3EB;
+    position: absolute;
+    top: 50%;
+    left: 30%;
+    width: 50%;
+    height: 50%;
+    margin: -25px 0 0 -25px;
+    letter-spacing: 5px;
+ }
+ /* MESA DE REGALOS */
+ .main .mesa-regalos{
+  background-color: #1E1E1E;
+}
+.main .mesa-regalos .titulo-mesa h1{
+  color: #F3F3EB;
+  font-family:'Rotten', sans-serif;
+  font-size: 50px;
+  margin-top: 5%;
+}
+.main .mesa-regalos .info-mesa{
+  margin-top: 5%;
+
+}
+.main .mesa-regalos .info-mesa p{
+  color: #F3F3EB;
+  font-family: 'Futura LT', sans-serif;
+  text-align: justify;
+  font-size: 20px;
+  letter-spacing: 5px;
+  width: 60%;
+
+}
+.main .mesa-regalos img{
+
+  width: 40%;
+  margin-bottom: 15%;
+  margin-top: 2%;
+}
 
 
-/* ----- ----- FOOTER ----- ----- */
-footer .direccion {
-  background: #3c4045;
-  padding: 30px 0;
-  color: #fff; }
-  footer .direccion .titulo {
-    font-size: 32px;
-    line-height: 32px;
-    font-weight: 300;
-    margin-bottom: 30px; }
-  footer .direccion .calle,
-  footer .direccion .telefono,
-  footer .direccion .correo {
-    margin-bottom: 10px; }
-  footer .direccion .logo img {
-    margin-top: 70px; }
-footer .social {
+/* FORMULARIO ASISTENCIA */
+.main .rsvp{
+  width: 100%;
+  background: #F3F3EB;
   text-align: center;
-  padding: 20px 0; }
-  footer .social a {
-    padding: 10px;
-    display: inline-block;
-    margin: 0 20px;
-    width: 50px;
-    font-size: 22px;
-    color: #fff;
-    background: #000;
-    border-radius: 100px; }
-    footer .social a:hover {
-      text-decoration: none; }
-    footer .social a.facebook {
-      background: #3b5998; }
-    footer .social a.twitter {
-      background: #55acee; }
-    footer .social a.youtube {
-      background: #cd201f; }
+}
+.main .rsvp .titulo-rsvp h1{
+  text-align: center;
+  font-family:'Rotten', sans-serif;
+  color: #C16301;
+  display: flex;
+  justify-content: center;
+  margin-top: 5%;
+  margin-bottom: 2%;
+}
+.main .rsvp .agradecimiento h2{
+  font-family: 'Futura LT', sans-serif;
+  font-weight: lighter;
+  text-align: center;
+  font-size: 20px;
+  
+}
+.main .rsvp form{
+  margin-top: 2%;
+  margin-bottom: 5%;
+  border: solid 3px #C16301;
+  border-radius: 15px;
+  padding: 20px;
+  display: inline-block;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: left;
+}
+.main .rsvp label{
+  color: #C16301;
+  font-family:'Rotten', sans-serif;
+  font-size: 15px;
+}
+.main .rsvp .btn-primary{
+  background: #C16301;
+  color: #F3F3EB;
+  font-family:'Rotten', sans-serif;
+  border: solid 1px #C16301;
+  border-radius: 50px;
+  text-align: center;
+}
+.main .rsvp form .boton{
+  margin: auto;
+  text-align: center;
+}
+.form-control:focus {
+  border-color: #C16301;
+  box-shadow: 0 0 0 0.2rem rgba(194, 131, 5, 0.25);
+} 
+.main .rsvp form select{
+  color: #C16301;
+}
+.form-select:focus{
+  border-color: #C16301;
+  box-shadow: 0 0 0 0.2rem rgba(194, 131, 5, 0.25);
+}
+/* ----- ----- FOOTER ----- ----- */
+.main .final{
+  background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),url("../img/footer.png");
+  background-size: cover;
+  background-position: center 0;
+  background-repeat: no-repeat;
+  height: 100vh;
+  position: relative;
+}
+.main .final img{
+  left: 50%;
+  top: 30%;
+  width: 7%;
+  position: absolute;
+}
+.main .final h1{
+  color: #F3F3EB;
+  font-family:'Rotten', sans-serif;
 
+}
+.main .final span{
+  color: #F3F3EB;
+  font-family: 'Futura LT', sans-serif;
+
+}
+.main .final .textos{
+  text-align: center;
+  position: absolute;
+  top: 70%;
+  left: 20%;
+}
+.background-menu .navbar-nav{
+  margin: auto;
+  
+}
       /* QUERIES */
 
 @media screen and (max-width: 992px) {
@@ -391,5 +386,74 @@ footer .social {
     header .textos .tercera_linea {
       font-size: 150px; 
       margin-left: 250px;}
+      .main .precios .texto-etiqueta img{
+        left: 40%;
+        top: 30%;
+        width:15%;
+        position: absolute;
+      }
+      .main .precios .texto-etiqueta p{
+        font-size: 15px;
+        width: 80%;
+        height: 50%;
+        position: absolute;
+        top: 50%;
+        left: 15%;
+        margin: -25px 0 0 -25px;
+
+      }
+
+      .main .mesa-regalos .titulo-mesa h1{
+        font-size: 40px;
+      }
+      .main .mesa-regalos .info-mesa{
+        margin-top: 5%;
+      
+      }
+      .main .mesa-regalos .info-mesa p{
+
+        font-size: 15px;
+        width: 80%;
+      
+      }
+
+      .main .final h1{
+        color: #F3F3EB;
+        font-family:'Rotten', sans-serif;
+        font-size: 20px;
+      }
+
+      .main .final .textos{
+        text-align: center;
+        position: absolute;
+        top: 70%;
+        left: 8%;
+      }
+
+      .main .fotos .foto .thumb img {
+        width: 250%;
+        vertical-align: top; 
+        background-size:contain;
+  
+    }
+    .main .fotos .foto .thumb h1 {
+      font-family:'Rotten', sans-serif;
+      color: #C16301;
+      font-weight: bold;
+      font-size: 15px;
+      text-align: center;
+      margin-top: 8%;
+  }
+  header {
+    background: url(../img/queryheader2.png);
+    height: 100vh;
+    background-size: cover;
+    background-position: center 0;
+    background-repeat: no-repeat; }
+      
+    header .textos .cuarta_linea {
+      margin-top: 145%;
+      font-size: 50px;
+    }
 }
 /*# sourceMappingURL=estilos.css.map */
