--- a/css/estilos.css
+++ b/css/estilos.css
@@ -7,7 +7,7 @@ body {
 
 /* ----- ----- HEADER ----- ----- */
 header {
-  background: url(../img/inicio.png);
+  background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),url("../img/portada-new.png");
   height: 100vh;
   background-size: cover;
   background-position: center 0;
@@ -288,7 +288,7 @@ header {
   box-shadow: 0 0 0 0.2rem rgba(194, 131, 5, 0.25);
 }
 /* ----- ----- FOOTER ----- ----- */
-.main .final{
+footer .final{
   background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),url("../img/footer.png");
   height: 100vh;
   background-size: cover;
@@ -421,18 +421,17 @@ header {
       }
 
       .main .final h1{
+        display: flex;
+justify-content: center;
+        align-items: center;
         color: #F3F3EB;
         font-family:'Rotten', sans-serif;
         font-size: 25px;
-        text-align: center;
+
+
       }
 
-      .main .final .textos{
-        text-align: center;
-        display: block;
-        position: absolute;
-        bottom: 0;
-      }
+
 
       .main .fotos .foto .thumb img {
         width: 100%;
@@ -450,9 +449,10 @@ header {
       margin-top: 8%;
   }
   header {
-    background: url(../img/queryheader2.png);
+    background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),url("../img/portada-new.png");
+    width: 100%;
     height: 100vh;
-    background-size: cover;
+    background-size:cover;
     background-position: center 0;
     background-repeat: no-repeat; }
       
